# news-collector

./: .env.sample  README.md  main.py  pyproject.toml
src/: news.py  save_to_file.py
