[tool.poetry]
name = "news-collector"
version = "0.1.0"
description = ""
authors = ["Nikolay Gendin <gendin786@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
isort = "^6.0.0"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
ignore_missing_imports = true
exclude = ".venv"

[tool.black]
# Максимальная длина строки
line-length = 119
exclude = '''
(
  /(
      \.git
  )/
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119